static/css/base.css
img{
	object-fit: scale-down;
	width:100%;
	height:100%;
}

a{
	color: #00334e;
	
	text-decoration: none;
	font-weight: bold;
}
a:hover{
	color: #bf0f0f;
}

button{
	margin: 2px;
	padding: 5px;
	border: none;
	border-radius: 50%;
	text-align: center;
	text-decoration: none;
	background-color: black;
	color: #00334e;
	font-size: 1em;
}
#red_btn{
	color: red;
}
#yellow_btn{
	color: orange;
}
#green_btn{
	color: lightgreen;
}
#stop_btn{
	color: white;
	background-color: red;
}

body{
	background-color: #00334e;
	color: #145374;
	font-family: "Roboto", "Verdana", "Arial";
}

#header{	
	padding-top: 10px;
	padding-bottom: 10px;
	
	
	text-align: center;
	font-size: 1.5em;
}
#subtitle{
	padding: 0px;
	
	font-size: 1em;
	font-style: italic;
}
#topbar{
	padding-left:5%;
	margin-top: 10px;
	margin-bottom: 10px;
	
	text-align: left;
	font-size: 1.2em;
}
#l-block{
	margin-left:2%;
	padding-left:5%;
	padding-right:2%;
	padding-bottom: 25px;
	float: left;
	width: 40%;
	
	text-align: left;
}
#r-block{
	margin-right:2%;
	padding:10px;
	float: right;
	width: 43%;
	height: 400px;
	
	text-align: right;
}
#bottombar{
	float:left;
	margin-top: 10px;
	padding-left:5%;
	padding-right:5%;
	margin-bottom: 10%;

	width:88%;
	text-align: left;
}
#bottombar-lone{
	position: relative;
	top: -290px;
	padding-left:5%;
	margin-top: 300px;
	margin-bottom: 10px;
	
	text-align: left;
	
	
}
#navbar{
	position:fixed;
	bottom: 10px;
	left: 10%;
	padding-bottom: 10px;
	padding-top: 10px;
	width: 80%;
	
	text-align: center;
	font-size: 1.1em;
}
div.contextbox a{
	margin-left:5px;
	margin-right:5px;
}

#home-navbar{
	margin-top: 8px;
	margin-bottom: 10px;
	padding-top: 5px;
	padding-bottom: 5px;
	padding-right: 5%;
	
	text-align: right;
	font-size: 1.1em;
}
#postnav{
	float: right;
	padding-right: 5%;
	font-size: 1.1em;
}
.imagebox{
	padding-top:10px;
}
#maptop{
	margin-bottom: 100px;
}
.contentbox{
	margin-top: 10px;
	margin-bottom: 10px;
	padding-top: 20px;
	padding-bottom: 20px;
	
	color: #e8e8e8;
	background-color: #00334e;
	border-left: 5px solid #5588a3;
}
div.contentbox a{
	color: #e8e8e8;
	
	text-decoration: none;
	font-weight: bold;	
}
div.contentbox a:hover{
	color: #5588a3;
}
.contextbox{
    padding-top: 5px;
	padding-bottom: 5px;
	padding-left: 5px;
	padding-right: 5px;
	
	color: black;
	background-color: #e8e8e8;
	border: 5px solid #bf0f0f;
	padding-top: 2px;
	padding-bottom: 2px;
	margin-bottom: 10px;
}
.postbox{
	border-left: 2px solid #e8e8e8;
	margin-left: -5%;
	margin-right: 5%;
	margin-top: 10px;
	padding: 15px;

	background-color: #333333;

	overflow:hidden;
}
#postimg{
	float: right;
	width:29%;
	height:10%;
}
#postinfo{
	float:left;
	width:69%;
	font-size:0.9em;
}
#posttitle{
	font-size:1.1em;
}
#fieldhelp{
	float:left;
	width: 45%;
	font-style:italic;
	font-size: 0.9em;
}
#field{
	float:right;
	width: 55%;
}

.infotxt{
	font-style:italic;
	font-size:0.9em;
	color: #e8e8e8;
}

.commentdisplaybox{
	border: solid 1px #e8e8e8 ;
	padding: 10px;
	margin-bottom:10px;
}
#comment{
	border: dotted 1px #e8e8e8;
	padding: 5px;
	margin-bottom: 5px;
}
#postinfobox{
	float:left;
	margin-bottom: 20px;
}
#ratingbox{
	float:right;

	text-align: right;
	font-size: 0.95em;
}
#postinfoandratingsbar{
	margin-bottom: 140px;
}
#map{
	margin-top:50px;
}
#mappost{
	margin-top: -10 px;
}

